--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -25,6 +25,7 @@
     "@prisma/client": "^6",
     "bcryptjs": "^3",
     "compression": "^1",
+    "cookie-parser": "^1",
     "cors": "^2",
     "dotenv": "^17",
     "express": "^5",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@types/compression": "^1",
+    "@types/cookie-parser": "^1",
     "@types/cors": "^2",
     "@types/express": "^5",
     "@types/jsonwebtoken": "^9",
@@ -44,7 +46,7 @@
     "@types/node": "^22.18.0",
     "@types/supertest": "^6",
     "@vitest/coverage-v8": "^3",
-    "cross-env": "^10.1.0",
+    "cross-env": "^10",
     "prisma": "^6",
     "rimraf": "^6",
     "supertest": "^7",
